Sub page layouts
Corbin Visual and Petcare app page layouts

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="grey-bg">
           <div class="container">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 col-xl-10 offset-xl-1">
                         <div class="skills-wrapper">
                             <div class="illustration">
                                 <img class="img-fluid" src="img/motion-design-illustration.png" alt="">
@@ -141,7 +141,7 @@
       <div class="white-bg">
           <div class="container">
              <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 col-xl-10 offset-xl-1">
                         <div class="skills-wrapper switch-order">
                             <div class="illustration">
                                 <img class="img-fluid" src="img/web-ui-illustration.png" alt="">
@@ -158,7 +158,7 @@
       <div class="grey-bg">
            <div class="container">
               <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 col-xl-10 offset-xl-1">
                         <div class="skills-wrapper">
                           <div class="illustration">
                               <img class="img-fluid" src="img/icon-illustration.png" alt="">
@@ -176,7 +176,7 @@
        <div class="white-bg">
            <div class="container">
               <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 col-xl-10 offset-xl-1">
                         <div class="skills-wrapper switch-order">
                           <div class="illustration">
                                 <img class="img-fluid" src="img/front-end-illustration.png" alt="">
