--- a/portfolio-pages/corbin-visual.html
+++ b/portfolio-pages/corbin-visual.html
@@ -92,56 +92,77 @@
    <!--END HEADER-->
 
    <!--PAGE CONTENT-->
-   <div class="grey-bg">
-       <div class="container">
-           <div class="row intro-text">
-             <div class="col-xs-12 col-lg-8">
-                <h2>Corbin Visual app video</h2>
-                <p>I worked with Corbin Visual to create an animated explainer video to promote their app for smartphones. The theme around this video is “your project in your hands”. The video’s purpose is to not only promote the company’s app, but also to make clients feel more at ease when working on a project with Corbin Visual.</p>
-             </div>
-           </div>
-           <div class="row">
-               <div class="col-xs-12">
-                   <div class="video-wrapper">
-                        <div class="inner-video-wrapper">
-                           <img class="ratio" src="http://placehold.it/16x9"/>
-                            <iframe src="https://player.vimeo.com/video/95443860" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+   <div class="corbin-visual">
+       <div class="grey-bg">
+           <div class="container">
+               <div class="row intro-text">
+                 <div class="col-xs-12 col-lg-8">
+                    <h2>Corbin Visual app video</h2>
+                    <p>I worked with Corbin Visual to create an animated explainer video to promote their app for smartphones. The theme around this video is “your project in your hands”. The video’s purpose is to not only promote the company’s app, but also to make clients feel more at ease when working on a project with Corbin Visual.</p>
+                 </div>
+               </div>
+               <div class="row">
+                   <div class="col-xs-12">
+                       <div class="video-wrapper">
+                            <div class="inner-video-wrapper">
+                               <img class="ratio" src="http://placehold.it/16x9"/>
+                                <iframe src="https://player.vimeo.com/video/95443860" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            </div>
                         </div>
-                    </div>
+                   </div>
                </div>
            </div>
        </div>
-   </div>
-   <div class="white-bg">
-       <div class="container">
-          <div class="row">
-             <div class="col-xs-12">
-                <h2>Stills</h2>
+       <div class="white-bg">
+           <div class="container">
+             <div class="row">
+                 <div class="col-xs-12">
+                     <div class="the-challenge">
+                         <div class="text">
+                             <h2>The Challenge</h2>
+                             <p>I worked with Corbin Visual to create an animated explainer video to promote their app for smartphones. The theme around this video is “your project in your hands”. The video’s purpose is to not only promote the company’s app, but also to make clients feel more at ease when working on a project with Corbin Visual.</p>
+                         </div>
+                         <div class="image-wrapper">
+                            <img class="img-fluid" src="../img/portfolio/corbin-visual-lightbulb.jpg" alt="">
+                        </div>
+                     </div>
+                     <div class="the-process">
+                         <div class="text">
+                             <h2>The Process</h2>
+                             <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
+                         </div>
+                         <div class="image-wrapper">
+                            <img class="img-fluid" src="../img/portfolio/corbin-visual-storyboard.jpg" alt="">
+                        </div>
+                     </div>
+                 </div>
              </div>
-           </div>
-           <div class="row">
-             <div class="col-xs-12">
-                 <div class="stills clearfix">
-                   <div class="photo-wrapper x2">
-                       <img class="img-fluid" src="../img/portfolio/demo-reel-still-1.jpg" alt="">
-                   </div>
-                   <div class="photo-wrapper x2">
-                       <img class="img-fluid" src="../img/portfolio/demo-reel-still-2.jpg" alt="">
-                   </div>
-                   <div class="photo-wrapper full">
-                       <img class="img-fluid" src="../img/portfolio/demo-reel-still-3.jpg" alt="">
-                   </div>
-                   <div class="photo-wrapper x3">
-                       <img class="img-fluid" src="../img/portfolio/demo-reel-still-4.jpg" alt="">
-                   </div>
-                   <div class="photo-wrapper x3">
-                       <img class="img-fluid" src="../img/portfolio/demo-reel-still-5.jpg" alt="">
-                   </div>
-                   <div class="photo-wrapper x3">
-                       <img class="img-fluid" src="../img/portfolio/demo-reel-still-6.jpg" alt="">
-                   </div>
-                </div>
-             </div>
+              <div class="row">
+                 <div class="col-xs-12">
+                    <h2>Stills</h2>
+                 </div>
+               </div>
+               <div class="row">
+                 <div class="col-xs-12">
+                     <div class="stills clearfix">
+                       <div class="photo-wrapper x2">
+                           <img class="img-fluid" src="../img/portfolio/corbin-visual-still-1.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper x2">
+                           <img class="img-fluid" src="../img/portfolio/corbin-visual-still-2.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper x3">
+                           <img class="img-fluid" src="../img/portfolio/corbin-visual-still-3.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper x3">
+                           <img class="img-fluid" src="../img/portfolio/corbin-visual-still-4.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper x3">
+                           <img class="img-fluid" src="../img/portfolio/corbin-visual-still-5.jpg" alt="">
+                       </div>
+                    </div>
+                 </div>
+               </div>
            </div>
        </div>
    </div>
