--- a/portfolio-pages/petcare-app.html
+++ b/portfolio-pages/petcare-app.html
@@ -11,24 +11,24 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
 
     <!--Bootstrap-->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" >
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/umd/alert.js"></script>
-    <script type="text/javascript" src="js/umd/button.js"></script>
-    <script type="text/javascript" src="js/umd/carousel.js"></script>
-    <script type="text/javascript" src="js/umd/collapse.js"></script>
-    <script type="text/javascript" src="js/umd/dropdown.js"></script>
-    <script type="text/javascript" src="js/umd/modal.js"></script>
-    <script type="text/javascript" src="js/umd/popover.js"></script>
-    <script type="text/javascript" src="js/umd/scrollspy.js"></script>
-    <script type="text/javascript" src="js/umd/tab.js"></script>
-    <script type="text/javascript" src="js/umd/tooltip.js"></script>
-    <script type="text/javascript" src="js/umd/util.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" >
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/umd/alert.js"></script>
+    <script type="text/javascript" src="../js/umd/button.js"></script>
+    <script type="text/javascript" src="../js/umd/carousel.js"></script>
+    <script type="text/javascript" src="../js/umd/collapse.js"></script>
+    <script type="text/javascript" src="../js/umd/dropdown.js"></script>
+    <script type="text/javascript" src="../js/umd/modal.js"></script>
+    <script type="text/javascript" src="../js/umd/popover.js"></script>
+    <script type="text/javascript" src="../js/umd/scrollspy.js"></script>
+    <script type="text/javascript" src="../js/umd/tab.js"></script>
+    <script type="text/javascript" src="../js/umd/tooltip.js"></script>
+    <script type="text/javascript" src="../js/umd/util.js"></script>
 
     <!--My Styles-->
-    <link rel="stylesheet" type="text/css" href="css/styles.css" >
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" >
 
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="../img/favicon.ico">
 
     <!--Google Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
 
     <!--lightbox function-->
-    <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="../js/functions.js"></script>
 
     <!--Google Analytics Tracking-->
     <script type="text/javascript">
@@ -63,7 +63,7 @@
            <div class="row">
               <div class="col-xs-12">
                   <div class="logo-nav-wrapper">
-                      <a href="index.html" class="logo"></a>
+                      <a href="../index.html" class="logo"></a>
                       <a class="menu-btn-mobile hidden-md-up" href="javascript:void(0);">
                           <span></span>
                           <span></span>
@@ -72,10 +72,10 @@
                       </a>
                       <div class="nav-container">
                           <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../portfolio.html">Portfolio</a></li>
                             <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
-                            <li><a class="active" href="javascript:void(0);">Contact</a></li>
+                            <li><a href="../contact.html">Contact</a></li>
                          </ul>
                          <ul class="social-media">
                             <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
@@ -87,37 +87,74 @@
                   </div>
               </div>
           </div>
-           <div class="row">
-               <div class="col-xs-12 text-xs-center banner">
-                   <img class="img-fluid-inline-block" src="img/say-hello.png" alt="">
-                   <h1 class="sr-only">Say Hello!</h1>
-                   <h4 class="white">Get in touch</h4>
-               </div>
-           </div>
        </div>
     </div>
    <!--END HEADER-->
 
-   <!--CONTACT-->
-   <div class="contact grey-bg">
+   <!--PAGE CONTENT-->
+   <div class="petcare-app">
+       <div class="banner">
+           <div class="container">
+               <div class="row intro-text">
+                 <div class="col-xs-12">
+                    <img class="img-fluid" src="../img/portfolio/petcare-app-logo.png" alt="">
+                 </div>
+               </div>
+           </div>
+       </div>
+       <div class="info">
+           <div class="container">
+               <div class="row">
+                   <div class="col-xs-12">
+                       <div class="wrapper">
+                            <div class="photo-wrapper">
+                               <img class="img-fluid" src="../img/portfolio/petcare-app-1.png" alt="">
+                           </div>
+                           <div class="text">
+                               <h2>Information all in one place</h2>
+                               <p>With the Petcare app, all of the pet’s information is stored in the app from things like date of birth to allergies.</p>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <div class="appointments">
+           <div class="container">
+               <div class="row">
+                   <div class="col-xs-12">
+                       <div class="wrapper">
+                            <div class="photo-wrapper">
+                                <img class="img-fluid" src="../img/portfolio/petcare-app-2.png" alt="">
+                           </div>
+                           <div class="text">
+                               <h2>Booking appointments is easy</h2>
+                               <p>Calling the vet can be a hassle. Scheduling an appointment through the app makes this process quicker and easier. There is even a reminder for when an annual check-up is due.</p>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </div>
+
+   <!--Featured work banner-->
+   <div class="featured-work-banner">
        <div class="container">
            <div class="row">
-             <div class="col-xs-12 col-xl-10 offset-xl-1">
-                 <div class="contact-wrapper">
-                     <div class="image-wrapper">
-                         <img class="img-fluid illustration" src="img/contact-illustration.png" alt="">
-                     </div>
-                     <div class="text">
-                         <h2>Let the storytelling begin</h2>
-                         <p>I am a web and motion designer currently located in Toronto, Ontario. I love creating dynamic videos, animations and interactive websites. It’s all about visual storytelling and interaction to keep the user engaged. Feel free to contact me and say hello.</p>
-                         <p class="email">Email me at <span class="bold orange">designs@amandawondergem.com</span>.</p>
-                     </div>
-                 </div>
+             <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
+                <div class="wrapper">
+                    <div class="text">
+                        <h2>Demo reel</h2>
+                        <a class="see-project" href="demo-reel.html">View case study</a>
+                    </div>
+                    <img class="img-fluid" src="../img/portfolio/demo-reel-banner.jpg" alt="">
+                </div>
              </div>
            </div>
        </div>
    </div>
-   <!--END CONTACT-->
+   <!--END PAGE CONTENT-->
 
     <!--FOOTER-->
     <div class="container-fluid footer">
