Petcare app page
Page layout

--- a/portfolio-pages/petcare-app.html
+++ b/portfolio-pages/petcare-app.html
@@ -102,34 +102,37 @@
                </div>
            </div>
        </div>
-       <div class="info">
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                            <div class="photo-wrapper">
-                               <img class="img-fluid" src="../img/portfolio/petcare-app-1.png" alt="">
-                           </div>
-                           <div class="text">
-                               <h2>Information all in one place</h2>
-                               <p>With the Petcare app, all of the pet’s information is stored in the app from things like date of birth to allergies.</p>
+       <div class="section">
+           <div class="info">
+               <div class="container">
+                   <div class="row">
+                       <div class="col-xs-12">
+                           <div class="wrapper">
+                               <div class="text">
+                                   <h2>Information all in one place</h2>
+                                   <p>With the Petcare app, all of the pet’s information is stored in the app from things like date of birth to allergies.</p>
+                               </div>
+                               <div class="photo-wrapper">
+                                   <img class="img-fluid" src="../img/portfolio/petcare-app-1.png" alt="">
+                               </div>
                            </div>
                        </div>
                    </div>
                </div>
            </div>
-       </div>
-       <div class="appointments">
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                            <div class="photo-wrapper">
-                                <img class="img-fluid" src="../img/portfolio/petcare-app-2.png" alt="">
-                           </div>
-                           <div class="text">
-                               <h2>Booking appointments is easy</h2>
-                               <p>Calling the vet can be a hassle. Scheduling an appointment through the app makes this process quicker and easier. There is even a reminder for when an annual check-up is due.</p>
+           <div class="blue-bg"></div>
+           <div class="appointments">
+               <div class="container">
+                   <div class="row">
+                       <div class="col-xs-12">
+                           <div class="wrapper">
+                               <div class="text">
+                                   <h2>Booking appointments is easy</h2>
+                                   <p>Calling the vet can be a hassle. Scheduling an appointment through the app makes this process quicker and easier. There is even a reminder for when an annual check-up is due.</p>
+                               </div>
+                               <div class="photo-wrapper">
+                                    <img class="img-fluid" src="../img/portfolio/petcare-app-2.png" alt="">
+                               </div>
                            </div>
                        </div>
                    </div>
@@ -139,16 +142,16 @@
    </div>
 
    <!--Featured work banner-->
-   <div class="featured-work-banner">
+   <div class="featured-work-banner adventure-finder-banner">
        <div class="container">
            <div class="row">
              <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="wrapper">
                     <div class="text">
-                        <h2>Demo reel</h2>
-                        <a class="see-project" href="demo-reel.html">View case study</a>
+                        <h2>Adventure Finder</h2>
+                        <a class="see-project" href="adventure-finder.html">View case study</a>
                     </div>
-                    <img class="img-fluid" src="../img/portfolio/demo-reel-banner.jpg" alt="">
+                    <img class="img-fluid" src="../img/portfolio/adventure-finder-banner.png" alt="">
                 </div>
              </div>
            </div>
