--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </div>
                            <div class="text">
                                <h2>Motion Design</h2>
-                               <p>Motion design is about visual storytelling. I animate videos to convey information, such as explaining about a product or service. Functional animation, such as microinteractions in web and UI design is also part of my skillset. I love capturing ideas and bringing them to life with animation.</p>
+                               <p>Motion design is about visual storytelling. I animate videos to convey information, such as explaining a product or service. Functional animation, such as microinteractions in web and UI design is also part of my skillset. I love capturing ideas and bringing them to life with animation.</p>
                            </div>
                         </div>
                     </div>
