--- a/portfolio-pages/corbin-visual.html
+++ b/portfolio-pages/corbin-visual.html
@@ -98,7 +98,7 @@
                <div class="row intro-text">
                  <div class="col-xs-12 col-lg-8">
                     <h2>Corbin Visual app video</h2>
-                    <p>I worked with Corbin Visual to create an animated explainer video to promote their app for smartphones. The theme around this video is “your project in your hands”. The video’s purpose is to not only promote the company’s app, but also to make clients feel more at ease when working on a project with Corbin Visual.</p>
+                    <p>An animated explainer video to promote the Corbin Visual app.</p>
                  </div>
                </div>
                <div class="row">
@@ -129,7 +129,7 @@
                      <div class="the-process">
                          <div class="text">
                              <h2>The Process</h2>
-                             <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
+                             <p>I started with a storyboard to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
                          </div>
                          <div class="image-wrapper">
                             <img class="img-fluid" src="../img/portfolio/corbin-visual-storyboard.jpg" alt="">
