--- a/portfolio-pages/adventure-finder.html
+++ b/portfolio-pages/adventure-finder.html
@@ -112,7 +112,7 @@
                            </div>
                            <div class="text">
                                <h2>The Challenge</h2>
-                               <p>With so many websites to visit for information, the process for choosing a new adventure can be a tedious and time consuming process. The app brings all of the information to one place for an easy-to-use experience. Users can discover new adventure destinations, see ratings, view images and write reviews all in one place.</p>
+                               <p>With so many websites to visit for information, choosing a new adventure can be a tedious and time consuming process. The Adventure Finder app brings all of the information to one place for an easy-to-use experience. Users can discover new adventure destinations, see ratings, view images and write reviews all in one place.</p>
                            </div>
                        </div>
                    </div>
@@ -131,7 +131,7 @@
                            </div>
                            <div class="text">
                                <h2>The Process</h2>
-                               <p>The user flow demonstrates how the user may interact with the app. A user starts off by picking what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). They  can view more details about specific locations. A prototype of the after was created using InVision, giving a true feel of how the user would interact with the app.</p>
+                               <p>The user flow demonstrates how the user may interact with the app. A user starts by choosing what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). They  can view more details about specific locations. A prototype of the app was created using InVision, giving a true feel of how the user would interact with the app.</p>
                                <a class="see-project" href="https://invis.io/PX8783MQR" target="_blank">View prototype</a>
                            </div>
                        </div>
@@ -147,7 +147,7 @@
                        <div class="wrapper">
                            <div class="text">
                                <h2>The Result</h2>
-                               <p>When designing the app, some useful features that came to mind to enhance the user experience include uploading pictures, adding the destination to their list and rating specific locations. There option is also the option to view adventure locations near the user’s current GPS location. This is useful is they are unfamiliar with the area and are looking for an adventure or if they are looking for something new to check out near where they live. The Adventure Finder app has all of the information in one place. This app will allow nature lovers to spend more time experiencing their adventures and less time finding and deciding upon them.</p>
+                               <p>When designing the app, some useful features that came to mind to enhance the user experience include uploading pictures, adding the destination to their list and rating specific locations. There is also the option to view adventure locations near the user’s current GPS location. This is useful is they are unfamiliar with the area and are looking for an adventure or if they are looking for something new to check out near where they live. The Adventure Finder app has all of the information in one place. This app will allow nature lovers to spend more time experiencing their adventures and less time finding and deciding upon them.</p>
                            </div>
                            <div class="photo-wrapper">
                                <img class="img-fluid" src="../img/portfolio/adventure-finder-phone-2.png" alt="">
@@ -164,7 +164,7 @@
                  <div class="col-xs-12">
                     <div class="text">
                         <h2>The Website</h2>
-                        <p>It is the perfect tool for sharing on social media to promote the app and ultimately result helping people find their next adventure!</p>
+                        <p>This is the perfect tool for sharing on social media to promote the app and ultimately result in helping people find their next adventure!</p>
                     </div>
                  </div>
                </div>
@@ -208,7 +208,7 @@
                 <div class="wrapper">
                     <div class="text">
                         <h2>Demo reel</h2>
-                        <a class="see-project" href="demo-reel.html">View case study</a>
+                        <a class="see-project" href="demo-reel.html">View demo reel</a>
                     </div>
                     <img class="img-fluid" src="../img/portfolio/demo-reel-banner.jpg" alt="">
                 </div>
