Added outlander project
Added outlander web design project to portfolio page

--- a/portfolio-pages/camping-icon-animation.html
+++ b/portfolio-pages/camping-icon-animation.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Amanda Wondergem | Web & Motion Designer | Toronto, Ontario</title>
@@ -155,7 +156,6 @@
              </div>
            </div>
        </div>
-   </div>iv>
    </div>
    <!--END PAGE CONTENT-->
 
