--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Amanda Wondergem | Web & Motion Designer | Toronto, Ontario</title>
@@ -112,6 +113,13 @@
                          <span class="overlay">
                              <h3>Adventure Finder</h3>
                              <p>App &amp; website design</p>
+                         </span>
+                     </a>
+                     <a class="portfolio-item" href=".//portfolio-pages/outlander.html">
+                         <img class="img-fluid" src="img/portfolio-items/outlander.jpg" alt="">
+                         <span class="overlay">
+                             <h3>Outlander</h3>
+                             <p>Website design</p>
                          </span>
                      </a>
                      <a class="portfolio-item" href="portfolio-pages/petcare-app.html">
