--- a/portfolio-pages/outlander.html
+++ b/portfolio-pages/outlander.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -94,125 +93,56 @@
    <!--END HEADER-->
 
    <!--PAGE CONTENT-->
-   <div class="adventure-finder">
-       <div class="banner">
+   <div class="outlander">
+       <div class="white-bg">
            <div class="container">
-               <div class="row intro-text">
+              <div class="row">
+                 <div class="col-xs-12 col-lg-8">
+                    <h2>Outlander website design</h2>
+                    <p>Outlander is the perfect adventure guide that encourages people to explore their world.</p>
+                 </div>
+               </div>
+               <div class="row">
                  <div class="col-xs-12">
-                    <img class="img-fluid" src="../img/portfolio/adventure-finder-logo.png" alt="">
+                     <div class="desktop-mockup">
+                       <div class="photo-wrapper">
+                           <img class="img-fluid" src="../img/portfolio/outlander-website-desktop.jpg" alt="">
+                       </div>
+                    </div>
                  </div>
                </div>
            </div>
-       </div>
-       <div class="the-challenge">
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                            <div class="photo-wrapper">
-                               <img class="img-fluid" src="../img/portfolio/adventure-finder-phone-1.png" alt="">
-                           </div>
-                           <div class="text">
-                               <h2>The Challenge</h2>
-                               <p>With so many websites to visit for information, choosing a new adventure can be a tedious and time consuming process. The Adventure Finder app brings all of the information to one place for an easy-to-use experience. Users can discover new adventure destinations, see ratings, view images and write reviews all in one place.</p>
+           <div class="mobile-mockup">
+               <div class="container">
+                   <div class="row">
+                       <div class="col-xs-12">
+                           <div class="wrapper">
+                               <div class="text">
+                                   <h2>Grab info on the go</h2>
+                                   <p>There are some great articles on outdoors gear, activities and wildlife.</p>
+                               </div>
+                               <div class="photo-wrapper">
+                                   <img class="img-fluid" src="../img/portfolio/outlander-website-mobile.jpg" alt="">
+                               </div>
                            </div>
                        </div>
                    </div>
                </div>
            </div>
        </div>
-       <div class="the-process">
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                            <div class="photo-wrapper">
-                               <a class="popup-button" href="javascript:void(0);" data-trigger=".user-flow" data-class="show">
-                                    <img class="img-fluid" src="../img/portfolio/adventure-finder-app-user-flow.png" alt="">
-                                </a>
-                           </div>
-                           <div class="text">
-                               <h2>The Process</h2>
-                               <p>The user flow demonstrates how the user may interact with the app. A user starts by choosing what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). They  can view more details about specific locations. A prototype of the app was created using InVision, giving a true feel of how the user would interact with the app.</p>
-                               <a class="see-project" href="https://invis.io/PX8783MQR" target="_blank">View prototype</a>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
-       <div class="the-result">
-          <div class="triangle"></div>
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                           <div class="text">
-                               <h2>The Result</h2>
-                               <p>When designing the app, some useful features that came to mind to enhance the user experience include uploading pictures, adding the destination to their list and rating specific locations. There is also the option to view adventure locations near the user’s current GPS location. This is useful is they are unfamiliar with the area and are looking for an adventure or if they are looking for something new to check out near where they live. The Adventure Finder app has all of the information in one place. This app will allow nature lovers to spend more time experiencing their adventures and less time finding and deciding upon them.</p>
-                           </div>
-                           <div class="photo-wrapper">
-                               <img class="img-fluid" src="../img/portfolio/adventure-finder-phone-2.png" alt="">
-                               <img class="img-fluid" src="../img/portfolio/adventure-finder-phone-2-md.png" alt="">
-                           </div>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
-       <div class="the-website">
-           <div class="container">
-               <div class="row">
-                 <div class="col-xs-12">
-                    <div class="text">
-                        <h2>The Website</h2>
-                        <p>This is the perfect tool for sharing on social media to promote the app and ultimately result in helping people find their next adventure!</p>
-                    </div>
-                 </div>
-               </div>
-           </div>
-       </div>
-       <div class="the-website-img">
-           <div class="container">
-               <div class="row">
-                 <div class="col-xs-12">
-                    <div class="photo-wrapper">
-                        <img class="img-fluid" src="../img/portfolio/adventure-finder-website.png" alt="">
-                    </div>
-                 </div>
-               </div>
-           </div>
-       </div>
-
-       <!--Popup-->
-       <div class="background hide popup-button">
-           <div class="user-flow hide popup-wrapper" data-trigger=".user-flow" data-class="show">
-                <div class="popup popup-button" data-trigger=".user-flow" data-class="show">
-                    <div class="popup-content">
-                        <div class="inner-content">
-                            <a data-trigger=".user-flow" data-class="show" class="close-btn" href="javascript:void(0);">
-                                <span></span>
-                                <span></span>
-                            </a>
-                            <img class="img-fluid" src="../img/portfolio/adventure-finder-app-user-flow-full.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-       </div>
-    </div>
+   </div>
 
    <!--Featured work banner-->
-   <div class="featured-work-banner">
+   <div class="featured-work-banner adventure-finder-banner">
        <div class="container">
            <div class="row">
              <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="wrapper">
                     <div class="text">
-                        <h2>Outlander Website</h2>
-                        <a class="see-project" href="outlander.html">View project</a>
+                        <h2>Adventure Finder</h2>
+                        <a class="see-project" href="adventure-finder.html">View case study</a>
                     </div>
-                    <img class="img-fluid" src="../img/portfolio-items/outlander.jpg" alt="">
+                    <img class="img-fluid" src="../img/portfolio/adventure-finder-banner.png" alt="">
                 </div>
              </div>
            </div>
