--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,7 @@
            <div class="row">
               <div class="col-xs-12">
                   <div class="logo-nav-wrapper">
+                      <a href="javascript:void(0);" class="logo"></a>
                       <div class="nav-container">
                           <ul class="nav">
                             <li><a href="index.html">Home</a></li>
