Added sketches to Adventure Finder project

--- a/portfolio-pages/adventure-finder.html
+++ b/portfolio-pages/adventure-finder.html
@@ -134,9 +134,22 @@
                            <div class="text">
                                <h2>The Process</h2>
                                <p>The user flow demonstrates how the user may interact with the app. A user starts by choosing what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). They  can view more details about specific locations. A prototype of the app was created using InVision, giving a true feel of how the user would interact with the app.</p>
-                               <a class="see-project" href="https://invis.io/PX8783MQR" target="_blank">View prototype</a>
+                               <div class="button-wrapper">
+                                   <a class="see-project popup-button" href="javascript:void(0);" data-trigger=".user-flow" data-class="show">View user flow</a>
+                                   <a class="see-project" href="https://invis.io/PX8783MQR" target="_blank">View prototype</a>
+                               </div>
                            </div>
                        </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <div class="sketches">
+           <div class="container">
+               <div class="row">
+                   <div class="col-xs-12">
+                       <img class="img-fluid hidden-md-up" src="../img/portfolio/adventure-finder-sketches-mobile.jpg" alt="">
+                       <img class="img-fluid hidden-sm-down" src="../img/portfolio/adventure-finder-sketches-desktop.jpg" alt="">
                    </div>
                </div>
            </div>
