--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
                         <a class="" href="portfolio-pages/borrowell-branding.html"><img class="img-fluid" src="img/portfolio-items/borrowell-branding@2x.png" alt="Borrowell logo"></a>
                         <h2>Borrowell branding</h2>
                         <p>Case study of brand evolution from <span class="nowrap">2018-2023</span></p>
-                        <a class="primary-button" href="portfolio-pages/borrowell-branding.html">View project</a>
+                        <a class="primary-button" href="portfolio-pages/borrowell-branding.html">View case study</a>
                     </li>
                     <li class="portfolio-item">
                         <a class="" href="portfolio-pages/borrowell-credit-builder-explainer-video.html"><img class="img-fluid" src="img/portfolio-items/borrowell-credit-builder-explainer-video@2x.png" alt="Character dreaming about their financial goals"></a>
                         <h2>Explainer video</h2>
                         <p>Case study of an explainer video for Borrowell Credit Builder</p>
-                        <a class="primary-button" href="portfolio-pages/borrowell-branding.html">View project</a>
+                        <a class="primary-button" href="portfolio-pages/borrowell-credit-builder-explainer-video.html">View case study</a>
                     </li>
                     <li class="portfolio-item">
                         <a class="" href="portfolio-pages/borrowell-credit-builder-marketing-assets.html"><img class="img-fluid" src="img/portfolio-items/borrowell-credit-builder@2x.png" alt="Borrowell Credit Builder logo"></a>
                         <h2>Ads & landing page</h2>
                         <p>Case study of marketing assets for Borrowell Credit Builder</p>
-                        <a class="primary-button" href="portfolio-pages/borrowell-credit-builder-marketing-assets.html">View project</a>
+                        <a class="primary-button" href="portfolio-pages/borrowell-credit-builder-marketing-assets.html">View case study</a>
                     </li>
                     <li class="portfolio-item">
                         <a class="" href="portfolio-pages/demo-reel.html"><img class="img-fluid" src="img/portfolio-items/demo-reel@2x.png" alt="Demo reel"></a>
