Another round of content updates

--- a/about.html
+++ b/about.html
@@ -96,20 +96,12 @@
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-9">
                             <h1>Hi, I'm Amanda Wondergem!</h1>
-                            <p>I'm a Vancouver-based Senior Designer. With over eight years of experience as a Visual Designer, I've crafted many brand stories for companies including Borrowell, WSPS and SunLife. I've brought these ideas to life with design, illustration and animation through multiple channels. 
-                            </p>  
+                            <p>I’m a visual designer based in Vancouver with 8+ years of experience simplifying complex content. At Borrowell, I drove the acquisition of 1.7M+ members with static and animated graphics and increased revenue by 16% with an explainer video. I also built design libraries and optimized brand impact.
+                            </p> 
+                            <p>Aside from design, I have a passion for storytelling which led me to write and illustrate stories as a child, and more recently, create paintings. I launched a successful side business using my brand, design, and marketing skills. I'm eager to expand my expertise to new industries and help tell your brand's story next.
+                            </p> 
                         </div>
                     </div>
-                    <br>
-                    <br>
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <p>I’ve always loved stories! At a young age, I wrote several stories so I could draw pictures for them. There were also times I maxed out my library card. (Yes, that’s a thing!) Recently, I’ve been drawn to tell stories through painting. Last year, I launched a side business to sell my artwork. Using my brand, design and marketing skills, I’ve built a Shopify website, set up email campaigns/workflows and created content for social media. Within one week of launching my first painting collection, I sold a painting!
-                            </p>
-                            <!-- <p class="image-caption">Website and branding for Amanda Wondergem Art</p> -->
-                            <p>The finance industry has been my main focus, but I’m also looking to expand and learn about other industries too. I’ve worked as a designer in agency settings and in-house for a fintech startup. I want to help tell your brand's story next!
-                            </p>
-                        </div>
                     </div>
                 </div>
             </div> 
