--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -110,22 +110,21 @@
 
                     <h2>Branding 2018-2023</h2>
 
-                    <h3>Getting started</h3>
-
-                    <div class="row">
+                    <div class="row align-center">
                         <div class="col-xs-12 col-lg-6">
+                            <h3>Getting started</h3>
                             <p>In 2018, I was the first visual designer to join Borrowell. The pre-existing branding involved a logo, typeface, colour palette and an illustrated character. My initial focus was to quickly create graphic assets that could be used across marketing and email initiatives. This involved designing ads, social posts, email headers, spot illustrations and product mockups. 
                             </p>
                         </div>
                         <div class="col-xs-12 col-lg-6">
-                            <div class="highlighted-section">
+                            <div class="highlighted-section" style="margin-top:0px;">
                                 <h4>Brand qualities</h4>
                                 <ul>
                                     <li>
                                         <p>Friendly</p>
                                         <p>Trustworthy</p>
                                         <p>Approachable</p>
-                                        <p>Accessible</p>
+                                        <p style="margin-bottom:0px; padding-bottom:0px;">Accessible</p>
                                     </li>
                                 </ul>
                             </div>
@@ -150,7 +149,6 @@
                         </li>
                     </ul>
 
-                    <br>
                     <h3>Establishing style guides and templates</h3>
 
                     <div class="row">
@@ -178,14 +176,14 @@
                     <h4>Creating templates for efficiency</h4>
                     <p>With remote work being the norm in 2020, templates became crucial for scalability as in-person explanations were no longer possible.
                     </p>
-                    <p class="bold">Thought process</p>
+                    <h5>Thought process</h5>
                     <ul class="bullets">
                         <li><p>How can I make things more efficient for the teams and myself?</p></li>
                         <li><p>How can I ensure the teams I support are using branding in the correct way?</p></li>
                         <li><p>How can I reduce my workload on repetitive tasks so I can focus on more impactful ones?</p></li>
                     </ul>
                     <br>
-                    <p class="bold">Solutions</p>
+                    <h5>Solutions</h5>
                     <ul class="bullets">
                         <li><p>Presentation deck template: This reduced the amount of ad hoc requests my team and I received. It also established an updated look for presentation decks so they could be cohesive company-wide. </p></li>
                         <li><p>Email templates and reusable components in Salesforce: This empowered the email engagement to create a variety of layouts in their emails, but still stay on-brand.
@@ -197,9 +195,6 @@
 
                     <p class="image-caption">Image of presentation deck slides</p>
 
-                    <br>
-                    <br>
-                    <br>
                     <h2>Evaluating what’s been established</h2>
                     <p>After a few years had passed, I started evaluating what had been established and whether it still met the ever-changing needs of the company.</p>
                     <p>In 2022, we shifted to lighter backgrounds. Saturated backgrounds posed a challenge for our illustrations as we wanted to maintain a hierarchy where the illustrations stood out more than the background. To achieve this, we followed the principle of desaturation as objects appear less saturated the further away they are from a viewer.
@@ -215,9 +210,6 @@
 
                     <p class="image-caption">Image of Figma ads templates + components</p>
 
-                    <br>
-                    <br>
-                    <br>
                     <h2>Opportunities for improvement</h2>
                     <ul class="bullets">
                         <li>
@@ -237,6 +229,11 @@
                     </ul>
 
                     <p class="image-caption">Image of CB landing page evolution that I proposed to be implemented</p>
+
+                    <div class="highlighted-section blue">
+                        <h4>Results</h4>
+                        <p>Using graphics and animations to simplify financial concepts, I helped facilitate the growth of acquisition from approximately 700k to over 2.5 million members in a span of five years.</p>
+                    </div>
 
                     <br>
                     <div class="highlighted-section">
