Adding images to portfolio pages

--- a/portfolio-pages/borrowell-credit-builder-explainer-video.html
+++ b/portfolio-pages/borrowell-credit-builder-explainer-video.html
@@ -89,7 +89,7 @@
    <div class="page-wrapper portfolio-item-details">
        <div class="container">
            <div class="row">
-                <div class="col-xs-12 col-lg-8 offset-lg-2">
+                <div class="col-xs-12 col-xl-8 offset-xl-2">
                     <h1>Borrowell Credit Builder explainer video</h1>
                     <p>Borrowell Credit Builder launched in May 2022.</p>
 
@@ -126,12 +126,12 @@
 
                     <div class="section">
                         <div class="row align-center">
-                            <div class="col-xs-12 col-lg-6">
+                            <div class="col-xs-12 col-md-6">
                                 <h3>Creating an explainer video</h3>
                                 <p>This was a self-initiated project to create an explainer video for the Credit Builder product. Despite A/B testing variations of the copy on the product education screen, there was no significant impact on results. Personally, I found the product difficult to comprehend and anticipated our members might feel the same way.
                                 </p>
                             </div>
-                            <div class="col-xs-12 col-lg-6">
+                            <div class="col-xs-12 col-md-6">
                                 <div class="video-container">
                                     <div class="video-wrapper">
                                         <div class="inner-video-wrapper">
@@ -173,7 +173,7 @@
                                 <p>To get stakeholders onboard, I began by creating a pitch deck for this project.</p>
                             </li>
                             <div class="row align-center">
-                                <div class="col-xs-12 col-lg-6">
+                                <div class="col-xs-12 col-md-6">
                                     <li>
                                         <p>Research around the use of videos to back up my idea:</p>
                                         <ul>
@@ -186,7 +186,7 @@
                                         </ul>
                                     </li>
                                 </div>
-                                <div class="col-xs-12 col-lg-6">
+                                <div class="col-xs-12 col-md-6">
                                     <img class="img-fluid" src="../img/credit-builder-explainer-video/how-people-prefer-to-learn.png" alt="How people prefer to learn about a product/service. 66% watch a short video. 18% read text article. 4% infographic. 3% e-book. 3% webinaror pitch. 2% sales call or demo.">
                                     <p class="image-caption">Graph demonstrating that learning by watching a video is preferred by the majority of people  (<a href="https://www.columnfivemedia.com/why-explainer-videos-help-your-brand/" target="_blank">source</a>)</p>
                                 </div>
@@ -197,7 +197,7 @@
                     <div class="section">
                         <div class="row">
                             <div class="col-xs-12 col-lg-8">
-                                <h5>Who this video can help</h5>
+                                <h5>Target audience</h5>
                                 <table style="width:100%">
                                     <tr>
                                       <th><p class="bold">Members</p></th>
@@ -228,7 +228,7 @@
                                   </table>
                             </div>
                             <div class="col-xs-12 col-lg-4">
-                                <h5 class="margin-top">Where this video can be used</h5>
+                                <h5 class="margin-top">Platforms</h5>
                                 <ul class="bullets">
                                     <li>
                                         <p>Education screen in product</p>
@@ -270,7 +270,7 @@
                     
                     <div class="section">
                         <div class="row align-center">
-                            <div class="col-xs col-md-6 12 col-xl-8">
+                            <div class="col-xs-12 col-md-6 12 col-xl-8">
                                 <h3>How success was measured</h3>
                                 <p>The PM hypothesized that an explainer video on the app's education screen would increase the adoption rate of Credit Builder by 5%. However, the actual adoption rate saw a significant increase of 16%, resulting in a corresponding growth in revenue.
                                 </p>
