--- a/portfolio-pages/borrowell-credit-builder-marketing-assets.html
+++ b/portfolio-pages/borrowell-credit-builder-marketing-assets.html
@@ -90,7 +90,7 @@
    <div class="page-wrapper portfolio-item-details">
        <div class="container">
            <div class="row">
-                <div class="col-xs-12 col-lg-8 offset-lg-2">
+                <div class="col-xs-12 col-xl-8 offset-xl-2">
                     <h1>Borrowell Credit Builder marketing assets</h1>
 
                     <h2>Client Background</h2>
